@@ -1,5 +1,6 @@
 {{$NEXT}}
   - Add FindBin to DiscouragedModules policy (#31)
+  - Add MultidimensionalArrayEmulation policy (#35)
 
 0.030     2019-08-26 11:27:15 EDT
   - Allow signature_enablers to be configured for Prototypes policy (#34)
